--- a/.github/actions/deps/action.yml
+++ b/.github/actions/deps/action.yml
@@ -4,49 +4,44 @@ inputs:
   build-dir:
     description: The directory in which to build the project.
     required: true
-  ccache-cache-name:
-    description: CCache cache name
-    required: true
-  runs-on:
-    description: The platform on which the workflow will be run.
-    required: true
 runs:
   using: composite
   steps:
     - name: Install GCC Problem Matcher
       uses: root-project/gcc-problem-matcher-improved@9d83f12b27a78210f0485fb188e08d94fa807a6d
-      if: ${{ !contains(inputs.runs-on, 'windows') }} # See https://github.com/root-project/gcc-problem-matcher-improved/issues/3
+      if: ${{ runner.os != 'Windows' }} # See https://github.com/root-project/gcc-problem-matcher-improved/issues/3
       with:
         build-directory: ${{ inputs.build-dir }}
 
     - name: Install MSYS2 Dependencies (Windows)
       uses: msys2/setup-msys2@v2
-      if: ${{ contains(inputs.runs-on, 'windows') }}
+      if: ${{ runner.os == 'Windows' }}
       with:
         msystem: MINGW64
         update: true
         install: git pkgconf mingw-w64-x86_64-toolchain mingw-w64-x86_64-cmake
 
     - name: Install Dependencies (macOS)
-      if: ${{ contains(inputs.runs-on, 'macos') }}
+      if: ${{ runner.os == 'macOS' }}
       shell: bash
       run: brew install pkg-config cmake ninja ccache
 
+      # Skip this step on act due to https://github.com/nektos/act/issues/1849
     - name: Install Dependencies (Linux x86_64/Android)
-      if: ${{ contains(inputs.runs-on, 'ubuntu') && !contains(inputs.ccache-cache-name, 'aarch64') }}
+      if: ${{ !env.ACT && runner.os == 'Linux' && !contains(github.job, 'aarch64') }}
       uses: awalsh128/cache-apt-pkgs-action@latest
       with:
         packages: cmake ninja-build libepoxy-dev ccache
         version: 1.0
 
     - name: Install Cross-Compile Support (Linux aarch64)
-      if: ${{ contains(inputs.runs-on, 'ubuntu') && contains(inputs.ccache-cache-name, 'aarch64') }}
+      if: ${{ runner.os == 'Linux' && contains(github.job, 'aarch64') }}
       uses: JesseTG/gha-ubuntu-cross@d4db19532db7c115bee0d051944c226c5057cd4a # Fork needed due to https://github.com/cyberjunk/gha-ubuntu-cross/pull/4
       with:
         arch: arm64
 
     - name: Install Dependencies (Linux aarch64)
-      if: ${{ contains(inputs.runs-on, 'ubuntu') && contains(inputs.ccache-cache-name, 'aarch64') }}
+      if: ${{ runner.os == 'Linux' && contains(github.job, 'aarch64') }}
       uses: awalsh128/cache-apt-pkgs-action@dev
       with:
         packages: cmake ninja-build libepoxy-dev:arm64 ccache
@@ -55,7 +50,7 @@ runs:
     - name: Set Up CCache
       uses: hendrikmuhs/ccache-action@v1.2.10
       with:
-        key: ${{ inputs.ccache-cache-name }}
+        key: ${{ github.job }}-${{ matrix.build-type }}
         append-timestamp: false
         variant: ${{ runner.os == 'Windows' && 'sccache' || 'ccache' }}
         # Using sccache on Windows due to https://github.com/hendrikmuhs/ccache-action/issues/112
