--- a/.github/actions/deps/action.yml
+++ b/.github/actions/deps/action.yml
@@ -7,6 +7,10 @@ inputs:
 runs:
   using: composite
   steps:
+    - run: echo "${{ toJSON(github) }}" # Debugging
+      shell: bash
+    - run: echo "${{ toJSON(job) }}" # Debugging
+      shell: bash
     - name: Install GCC Problem Matcher
       uses: root-project/gcc-problem-matcher-improved@9d83f12b27a78210f0485fb188e08d94fa807a6d
       if: ${{ runner.os != 'Windows' }} # See https://github.com/root-project/gcc-problem-matcher-improved/issues/3
