--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,6 +17,7 @@ jobs:
     with:
       archive-name: melondsds_libretro-win32-x86_64
       runs-on: windows-latest
+      target: win32
       info-dir: info
       lib-ext: dll
       shell: msys2 {0}
@@ -28,6 +29,7 @@ jobs:
     with:
       archive-name: melondsds_libretro-macos-universal
       runs-on: macos-latest
+      target: macos-universal
       lib-ext: dylib
       cmake-args: -DCMAKE_OSX_ARCHITECTURES:STRING="arm64;x86_64" -DENABLE_OGLRENDERER=OFF
       # Disabled OpenGL on macOS due to https://github.com/JesseTG/melonds-ds/issues/12
@@ -37,6 +39,7 @@ jobs:
     uses: ./.github/workflows/build.yaml
     with:
       archive-name: melondsds_libretro-linux-x86_64
+      target: linux-x86_64
       runs-on: ubuntu-latest
       lib-ext: so
 
@@ -45,6 +48,7 @@ jobs:
     uses: ./.github/workflows/build.yaml
     with:
       archive-name: melondsds_libretro-linux-aarch64
+      target: linux-aaarch64
       runs-on: ubuntu-latest
       lib-ext: so
       cmake-args: -DCMAKE_C_COMPILER=aarch64-linux-gnu-gcc -DCMAKE_CXX_COMPILER=aarch64-linux-gnu-g++ -DPKG_CONFIG_EXECUTABLE=/usr/bin/aarch64-linux-gnu-pkg-config
@@ -54,6 +58,7 @@ jobs:
     uses: ./.github/workflows/build.yaml
     with:
       lib-ext: so
+      target: android
       archive-name: melondsds_libretro-android
       lib-name: melondsds_libretro
       cmake-args: -DENABLE_OGLRENDERER=OFF -DANDROID_ABI=arm64-v8a -DANDROID_PLATFORM=24 -DCMAKE_TOOLCHAIN_FILE="$ANDROID_NDK/build/cmake/android.toolchain.cmake"
@@ -65,6 +70,7 @@ jobs:
     uses: ./.github/workflows/build.yaml
     with:
       runs-on: macos-latest
+      target: ios
       archive-name: melondsds_libretro-ios
       info-dir: info
       lib-ext: dylib
