--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -48,6 +48,13 @@ jobs:
       TESTFILE_REPO: ${{ secrets.TESTFILE_REPO }}
       DSI_NAND_ARCHIVE: ${{ secrets.DSI_NAND_ARCHIVE }}
       DSI_NAND: ${{ secrets.DSI_NAND }}
+      ARM7_BIOS: ${{ secrets.ARM7_BIOS }}
+      ARM9_BIOS: ${{ secrets.ARM9_BIOS }}
+      ARM7_DSI_BIOS: ${{ secrets.ARM7_DSI_BIOS }}
+      ARM9_DSI_BIOS: ${{ secrets.ARM9_DSI_BIOS }}
+      NDS_FIRMWARE: ${{ secrets.NDS_FIRMWARE }}
+      DSI_FIRMWARE: ${{ secrets.DSI_FIRMWARE }}
+      NDS_ROM: ${{ secrets.NDS_ROM }}
 
   linux-aarch64:
     name: Linux (aarch64)
